my-apps/media/qbt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-x45-tef
      dnsPolicy: Default
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:5.0.3
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 6881
          name: bt-tcp
          protocol: TCP
        - containerPort: 6881
          name: bt-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: torrents
          mountPath: /data/torrents
          subPath: data/torrents
        resources:
          requests:
            memory: 512Mi
            cpu: 100m
          limits:
            memory: 2Gi
            cpu: 2000m
        securityContext:
          privileged: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbt-config
      - name: torrents
        persistentVolumeClaim:
          claimName: qbt-torrents
