my-apps/media/qbt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbt
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: bt-tcp
    port: 6881
    targetPort: 6881
    protocol: TCP
  - name: bt-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
  selector:
    app: qbittorrent
